# sessionprep

./: .gitignore  .pylintrc  DEVELOPMENT.md  KANBAN.md  README.md  REFERENCE.md  TECHNICAL.md  TODO.md  build_conf.py  build_nuitka.py  build_pyinstaller.py  build_script.py  pyproject.toml  sessionprep-gui.py  sessionprep.py
.github/workflows/: build-nuitka.yml  build-pyinstaller.yml
packaging/linux/: install-sessionprep.sh  nfpm.yaml  sessionprep.desktop
packaging/windows/: sessionprep.iss
sessionprepgui/: __init__.py  analysis_mixin.py  daw_mixin.py  detail_mixin.py  groups_mixin.py  helpers.py  log.py  mainwindow.py  param_widgets.py  playback.py  preferences.py  report.py  session_io.py  settings.py  table_widgets.py  theme.py  track_columns_mixin.py  waveform.py  waveform_overlay.py  waveform_renderer.py  waveform_spectrogram.py  widgets.py  worker.py
sessionprepgui/analysis/: __init__.py  mixin.py  worker.py
sessionprepgui/batch/: __init__.py  manager.py  panel.py
sessionprepgui/daw/: __init__.py  mixin.py
sessionprepgui/daw_tools/: __init__.py
sessionprepgui/detail/: __init__.py  mixin.py  playback.py  report.py
sessionprepgui/prefs/: __init__.py  config_pages.py  dialog.py  page_colors.py  page_general.py  page_groups.py  param_form.py  param_widgets.py  preset_panel.py
sessionprepgui/res/: icon.icns
sessionprepgui/session/: __init__.py  io.py
sessionprepgui/topology/: __init__.py  dialogs.py  input_tree.py  mixin.py  operations.py  output_tree.py
sessionprepgui/tracks/: __init__.py  columns_mixin.py  groups_mixin.py  table_widgets.py
sessionprepgui/waveform/: __init__.py  compute.py  overlay.py  panel.py  peakcache.py  renderer.py  spectrogram.py  widget.py
sessionpreplib/: __init__.py  _version.py  audio.py  chunks.py  config.py  daw_processor.py  detector.py  events.py  logging_setup.py  models.py  pipeline.py  processor.py  queue.py  rendering.py  reports.py  topology.py  utils.py
sessionpreplib/daw_processors/: __init__.py  dawproject.py  protools.py  ptsl_helpers.py
sessionpreplib/detectors/: __init__.py  audio_classifier.py  clipping.py  crest_factor.py  dc_offset.py  dual_mono.py  format_consistency.py  length_consistency.py  mono_folddown.py  one_sided_silence.py  silence.py  stereo_compat.py  stereo_correlation.py  subsonic.py  tail_exceedance.py
sessionpreplib/processors/: __init__.py  bimodal_normalize.py  (+1 more)
tests/: conftest.py
(+8 files in other folders)
