[project]
name = "sessionprep"
dynamic = ["version"]
description = "Batch audio analyzer and normalizer for mix session preparation"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.13,<3.14"

dependencies = [
    "numpy>=1.26",
    "soundfile>=0.12",
    "scipy>=1.12",
]

[project.scripts]
sessionprep = "sessionprep:process_files"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "sessionpreplib/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["sessionpreplib", "sessionprepgui"]
# Include the CLI script at the top level
include = ["sessionpreplib/**", "sessionprepgui/**", "sessionprep.py", "sessionprep-gui.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.optional-dependencies]
cli = ["rich>=13.0"]
gui = [
    "PySide6>=6.10.2",
    "sounddevice>=0.5.5",
    "py-ptsl>=600.2.0",
    "dawproject @ git+https://github.com/roex-audio/dawproject-py.git@e848bd06b00408018ff97dfb54942f3fa303a6a6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyinstaller>=6.0",
    "Pillow>=10.0",
    "nuitka>=4.0",
    "zstandard>=0.25.0",
    "rich>=13.0",
    "patchelf>=0.17.2.4; sys_platform != 'win32'",
]
